--- a/okiposhotel.html
+++ b/okiposhotel.html
@@ -17,19 +17,34 @@
 
     <link rel="stylesheet" href="./okiposhotel_files/bootstrap.css" fetchpriority="high">
     <link rel="stylesheet" href="./okiposhotel_files/animate.css">
-    <link rel="stylesheet" href="./okiposhotel_files/owl.carousel.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
     <link rel="stylesheet" href="./okiposhotel_files/aos.css">
     <link rel="stylesheet" href="./okiposhotel_files/fancybox.min.css">
     <link rel="stylesheet" href="./okiposhotel_files/animsition.min.css">
 
-    <link rel="stylesheet" href="./okiposhotel_files/ionicons.min.css">
-    <link rel="stylesheet" href="./okiposhotel_files/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <!-- Theme Style -->
     <link rel="stylesheet" href="./okiposhotel_files/style.css">
+    <style>
+      /* Simple fade-in animation */
+      body {
+        animation: fadeIn 1.5s ease-in-out;
+      }
+      @keyframes fadeIn {
+        from { opacity: 0; }
+        to { opacity: 1; }
+      }
+      /* Smooth scrolling */
+      html {
+        scroll-behavior: smooth;
+      }
+    </style>
 </head>
 <body data-aos-easing="ease" data-aos-duration="1000" data-aos-delay="0" class="">
-    <div class="js-animsition animsition" id="site-wrap" data-animsition-in-class="fade-in" data-animsition-out-class="fade-out" style="animation-duration: 1500ms; opacity: 1;">
+    <div id="site-wrap">
 
     <header class="site-header">
       <div class="container-fluid">
@@ -91,7 +106,7 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-lg-6 mb-4 aos-init" data-aos="fade-up">
-            <p><img src="./okiposhotel_files/img_1_long.jpg" alt="O Kipos Hotel Garden" class="img-fluid" fetchpriority="high" decoding="sync"></p>
+            <p><img src="./okiposhotel_files/images/front.jpg" alt="O Kipos Hotel Garden" class="img-fluid" fetchpriority="high" decoding="sync"></p>
           </div>
           <div class="col-lg-6 pl-lg-5 aos-init" data-aos="fade-up" id="about">
             <h2 class="mb-4">Welcome to O Kipos Hotel</h2>
@@ -176,59 +191,19 @@
         </div>
         <div class="row">
           <div class="col-md-12">
-            <div class="home-slider major-caousel owl-carousel mb-5 owl-loaded owl-drag aos-init" data-aos="fade-up" data-aos-delay="200">
-            <div class="owl-stage-outer"><div class="owl-stage" style="transform: translate3d(-4480px, 0px, 0px); transition: all; width: 7840px;"><div class="owl-item cloned" style="width: 1110px; margin-right: 10px;"><div class="owl-nav"><button role="presentation" class="owl-prev"><span class="ion-chevron-left"></span></button><button role="presentation" class="owl-next"><span class="ion-chevron-right"></span></button></div></div><div class="owl-item cloned" style="width: 1110px; margin-right: 10px;"><div class="owl-dots"><button class="owl-dot"><span></span></button><button class="owl-dot active"><span></span></button><button class="owl-dot"><span></span></button><button class="owl-dot"><span></span></button><button class="owl-dot"><span></span></button><button class="owl-dot"><span></span></button></div></div><div class="owl-item" style="width: 1110px; margin-right: 10px;"><div class="owl-stage-outer"><div class="owl-stage" style="transform: translate3d(-4480px, 0px, 0px); transition: all; width: 13440px;"><div class="owl-item cloned" style="width: 1110px; margin-right: 10px;"><div class="slider-item">
-                <img src="./okiposhotel_files/slider-4.jpg" alt="Hotel view" class="img-fluid" loading="lazy" decoding="async">
-              </div></div><div class="owl-item cloned" style="width: 1110px; margin-right: 10px;"><div class="slider-item">
-                <img src="./okiposhotel_files/slider-5.jpg" alt="Hotel view" class="img-fluid" loading="lazy" decoding="async">
-              </div></div><div class="owl-item cloned" style="width: 1110px; margin-right: 10px;"><div class="slider-item">
-                <img src="./okiposhotel_files/slider-6.jpg" alt="Hotel view" class="img-fluid" loading="lazy" decoding="async">
-              </div></div><div class="owl-item animated owl-animated-out fadeOut" style="width: 1110px; margin-right: 10px; left: 1120px;"><div class="slider-item">
-                <img src="./okiposhotel_files/slider-1.jpg" alt="Hotel view" class="img-fluid" loading="lazy" decoding="async">
-              </div></div><div class="owl-item animated owl-animated-in fadeIn active" style="width: 1110px; margin-right: 10px;"><div class="slider-item">
-                <img src="./okiposhotel_files/slider-2.jpg" alt="Hotel view" class="img-fluid" loading="lazy" decoding="async">
-              </div></div><div class="owl-item" style="width: 1110px; margin-right: 10px;"><div class="slider-item">
-                <img src="./okiposhotel_files/slider-3.jpg" alt="Hotel view" class="img-fluid" loading="lazy" decoding="async">
-              </div></div><div class="owl-item" style="width: 1110px; margin-right: 10px;"><div class="slider-item">
-                <img src="./okiposhotel_files/slider-4.jpg" alt="Hotel view" class="img-fluid" loading="lazy" decoding="async">
-              </div></div><div class="owl-item" style="width: 1110px; margin-right: 10px;"><div class="slider-item">
-                <img src="./okiposhotel_files/slider-5.jpg" alt="Hotel view" class="img-fluid" loading="lazy" decoding="async">
-              </div></div><div class="owl-item" style="width: 1110px; margin-right: 10px;"><div class="slider-item">
-                <img src="./okiposhotel_files/slider-6.jpg" alt="Hotel view" class="img-fluid" loading="lazy" decoding="async">
-              </div></div><div class="owl-item cloned" style="width: 1110px; margin-right: 10px;"><div class="slider-item">
-                <img src="./okiposhotel_files/slider-1.jpg" alt="Hotel view" class="img-fluid" loading="lazy" decoding="async">
-              </div></div><div class="owl-item cloned" style="width: 1110px; margin-right: 10px;"><div class="slider-item">
-                <img src="./okiposhotel_files/slider-2.jpg" alt="Hotel view" class="img-fluid" loading="lazy" decoding="async">
-              </div></div><div class="owl-item cloned" style="width: 1110px; margin-right: 10px;"><div class="slider-item">
-                <img src="./okiposhotel_files/slider-3.jpg" alt="Hotel view" class="img-fluid" loading="lazy" decoding="async">
-              </div></div></div></div></div><div class="owl-item animated owl-animated-out fadeOut" style="width: 1110px; margin-right: 10px; left: 1120px;"><div class="owl-nav"><button role="presentation" class="owl-prev"><span class="ion-chevron-left"></span></button><button role="presentation" class="owl-next"><span class="ion-chevron-right"></span></button></div></div><div class="owl-item animated owl-animated-in fadeIn active" style="width: 1110px; margin-right: 10px;"><div class="owl-dots"><button class="owl-dot"><span></span></button><button class="owl-dot active"><span></span></button><button class="owl-dot"><span></span></button><button class="owl-dot"><span></span></button><button class="owl-dot"><span></span></button><button class="owl-dot"><span></span></button></div></div><div class="owl-item cloned" style="width: 1110px; margin-right: 10px;"><div class="owl-stage-outer"><div class="owl-stage" style="transform: translate3d(-4480px, 0px, 0px); transition: all; width: 13440px;"><div class="owl-item cloned" style="width: 1110px; margin-right: 10px;"><div class="slider-item">
-                <img src="./okiposhotel_files/slider-4.jpg" alt="Hotel view" class="img-fluid" loading="lazy" decoding="async">
-              </div></div><div class="owl-item cloned" style="width: 1110px; margin-right: 10px;"><div class="slider-item">
-                <img src="./okiposhotel_files/slider-5.jpg" alt="Hotel view" class="img-fluid" loading="lazy" decoding="async">
-              </div></div><div class="owl-item cloned" style="width: 1110px; margin-right: 10px;"><div class="slider-item">
-                <img src="./okiposhotel_files/slider-6.jpg" alt="Hotel view" class="img-fluid" loading="lazy" decoding="async">
-              </div></div><div class="owl-item animated owl-animated-out fadeOut" style="width: 1110px; margin-right: 10px; left: 1120px;"><div class="slider-item">
-                <img src="./okiposhotel_files/slider-1.jpg" alt="Hotel view" class="img-fluid" loading="lazy" decoding="async">
-              </div></div><div class="owl-item animated owl-animated-in fadeIn active" style="width: 1110px; margin-right: 10px;"><div class="slider-item">
-                <img src="./okiposhotel_files/slider-2.jpg" alt="Hotel view" class="img-fluid" loading="lazy" decoding="async">
-              </div></div><div class="owl-item" style="width: 1110px; margin-right: 10px;"><div class="slider-item">
-                <img src="./okiposhotel_files/slider-3.jpg" alt="Hotel view" class="img-fluid" loading="lazy" decoding="async">
-              </div></div><div class="owl-item" style="width: 1110px; margin-right: 10px;"><div class="slider-item">
-                <img src="./okiposhotel_files/slider-4.jpg" alt="Hotel view" class="img-fluid" loading="lazy" decoding="async">
-              </div></div><div class="owl-item" style="width: 1110px; margin-right: 10px;"><div class="slider-item">
-                <img src="./okiposhotel_files/slider-5.jpg" alt="Hotel view" class="img-fluid" loading="lazy" decoding="async">
-              </div></div><div class="owl-item" style="width: 1110px; margin-right: 10px;"><div class="slider-item">
-                <img src="./okiposhotel_files/slider-6.jpg" alt="Hotel view" class="img-fluid" loading="lazy" decoding="async">
-              </div></div><div class="owl-item cloned" style="width: 1110px; margin-right: 10px;"><div class="slider-item">
-                <img src="./okiposhotel_files/slider-1.jpg" alt="Hotel view" class="img-fluid" loading="lazy" decoding="async">
-              </div></div><div class="owl-item cloned" style="width: 1110px; margin-right: 10px;"><div class="slider-item">
-                <img src="./okiposhotel_files/slider-2.jpg" alt="Hotel view" class="img-fluid" loading="lazy" decoding="async">
-              </div></div><div class="owl-item cloned" style="width: 1110px; margin-right: 10px;"><div class="slider-item">
-                <img src="./okiposhotel_files/slider-3.jpg" alt="Hotel view" class="img-fluid" loading="lazy" decoding="async">
-              </div></div></div></div></div><div class="owl-item cloned" style="width: 1110px; margin-right: 10px;"><div class="owl-nav"><button role="presentation" class="owl-prev"><span class="ion-chevron-left"></span></button><button role="presentation" class="owl-next"><span class="ion-chevron-right"></span></button></div></div></div></div><div class="owl-nav"><button role="presentation" class="owl-prev"><span class="ion-chevron-left"></span></button><button role="presentation" class="owl-next"><span class="ion-chevron-right"></span></button></div><div class="owl-dots"><button class="owl-dot"><span></span></button><button class="owl-dot"><span></span></button><button class="owl-dot active"><span></span></button></div></div>
+            <div class="home-slider major-caousel owl-carousel mb-5" data-aos="fade-up" data-aos-delay="200">
+              <div class="slider-item">
+                <img src="./okiposhotel_files/images/hotel1.jfif" alt="O Kipos Hotel" class="img-fluid">
+              </div>
+              <div class="slider-item">
+                <img src="./okiposhotel_files/images/hotel2.jpg" alt="O Kipos Hotel" class="img-fluid">
+              </div>
+              <div class="slider-item">
+                <img src="./okiposhotel_files/images/hotel3.webp" alt="O Kipos Hotel" class="img-fluid">
+              </div>
+            </div>
             <!-- END slider -->
           </div>
-
         </div>
       </div>
     </section>
@@ -279,60 +254,6 @@
       </div>
     </section>
     <!-- END section -->
-
-
-
-    <section class="section testimonial-section bg-light-2" id="testimonials">
-      <div class="container">
-        <div class="row justify-content-center text-center mb-5">
-          <div class="col-md-8">
-            <h2 class="heading aos-init" data-aos="fade-up">What Our Guests Say</h2>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-4 aos-init" data-aos="fade-up" data-aos-delay="100">
-            <div class="testimonial">
-              <div class="author-image mb-3">
-                <img src="./okiposhotel_files/person_1.jpg" alt="Maria K." class="rounded-circle" loading="lazy" decoding="async">
-              </div>
-              <blockquote>
-
-                <p>"O Kipos Hotel exceeded all our expectations. The garden is absolutely beautiful, the rooms are spotless, and the staff made us feel like family. We'll definitely be back!"</p>
-              </blockquote>
-              <p><em>- Maria K.</em></p>
-
-            </div>
-          </div>
-          <!-- END col -->
-          <div class="col-md-4 aos-init" data-aos="fade-up" data-aos-delay="200">
-            <div class="testimonial">
-              <div class="author-image mb-3">
-                <img src="./okiposhotel_files/person_2.jpg" alt="George P." class="rounded-circle" loading="lazy" decoding="async">
-              </div>
-              <blockquote>
-                <p>"The perfect base for exploring Greece. The breakfast was delicious, the pool was refreshing, and the views from our balcony were simply stunning. Highly recommended!"</p>
-              </blockquote>
-              <p><em>- George P.</em></p>
-            </div>
-          </div>
-          <!-- END col -->
-
-          <div class="col-md-4 aos-init" data-aos="fade-up" data-aos-delay="300">
-            <div class="testimonial">
-              <div class="author-image mb-3">
-                <img src="./okiposhotel_files/person_3.jpg" alt="Elena S." class="rounded-circle" loading="lazy" decoding="async">
-              </div>
-              <blockquote>
-
-                <p>"A hidden gem! The peaceful atmosphere, beautiful gardens, and genuine Greek hospitality made our honeymoon unforgettable. Thank you, O Kipos!"</p>
-              </blockquote>
-              <p><em>- Elena S.</em></p>
-            </div>
-          </div>
-          <!-- END col -->
-        </div>
-      </div>
-    </section>
 
     <section class="section visit-section">
       <div class="container">
@@ -456,14 +377,43 @@
     </footer>
   </div> <!-- .animsition -->
 
-    <script src="./okiposhotel_files/jquery-3.2.1.min.js.download"></script>
-    <script src="./okiposhotel_files/popper.min.js.download"></script>
-    <script src="./okiposhotel_files/bootstrap.min.js.download"></script>
-    <script src="./okiposhotel_files/owl.carousel.min.js.download"></script>
-    <script src="./okiposhotel_files/jquery.fancybox.min.js.download"></script>
-    <script src="./okiposhotel_files/animsition.min.js.download"></script>
-    <script src="./okiposhotel_files/aos.js.download"></script>
-    <script src="./okiposhotel_files/main.js.download"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+    <script>
+      $(document).ready(function() {
+        // AOS Animation
+        AOS.init({
+          duration: 1000,
+          easing: 'ease',
+          once: true
+        });
+
+        // Owl Carousel
+        $('.owl-carousel').owlCarousel({
+          loop: true,
+          margin: 10,
+          nav: true,
+          dots: true,
+          autoplay: true,
+          autoplayTimeout: 5000,
+          navText: ['<span class="ion-chevron-left"></span>', '<span class="ion-chevron-right"></span>'],
+          items: 1
+        });
+
+        // Menu toggle
+        $('.js-site-menu-toggle').on('click', function() {
+          $('.js-site-navbar').slideToggle(300);
+        });
+
+        // Close menu when clicking a nav link
+        $('.site-navbar a').on('click', function() {
+          $('.js-site-navbar').slideUp(300);
+        });
+      });
+    </script>
 
 </body>
 </html>
