--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com/">
     <title>O Kipos Hotel - Your Greek Escape</title>
 
+    <!-- Favicons -->
+    <link rel="icon" type="image/x-icon" href="./okiposhotel_files/images/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="./okiposhotel_files/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./okiposhotel_files/images/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./okiposhotel_files/images/apple-touch-icon.png">
+    <link rel="manifest" href="./okiposhotel_files/images/site.webmanifest">
+
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link href="./okiposhotel_files/css" rel="stylesheet" media="all" onload="this.media='all';this.onload=null;">
